--- a/pax-cdi-test-support/src/main/resources/META-INF/pax-cdi-version.properties
+++ b/pax-cdi-test-support/src/main/resources/META-INF/pax-cdi-version.properties
@@ -18,5 +18,5 @@
 #
 
 pax.cdi.version=${project.version}
-pax.web.version=${pax.web.version}
-jetty.version=${jetty.version}
+pax.web.version=${version.org.ops4j.pax.web}
+jetty.version=${version.org.eclipse.jetty}
