--- a/pax-cdi-test-support/src/main/resources/versions.properties
+++ b/pax-cdi-test-support/src/main/resources/versions.properties
@@ -18,6 +18,6 @@
 #
 
 version.pax.cdi = ${project.version}
-version.pax.web = ${pax.web.version}
-version.jetty = ${jetty.version}
-version.owb1 = ${openwebbeans1.version}
+version.pax.web = ${version.org.ops4j.pax.web}
+version.jetty = ${version.org.eclipse.jetty}
+version.owb1 = ${version.org.apache.openwebbeans}
