--- a/pax-cdi-api/pom.xml
+++ b/pax-cdi-api/pom.xml
@@ -25,35 +25,38 @@
 
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>1.1.4-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
+        <version>1.1.4-SNAPSHOT</version>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
-    
+
     <artifactId>pax-cdi-api</artifactId>
     <packaging>bundle</packaging>
 
     <name>OPS4J Pax CDI Bean Bundle API</name>
-    
+
     <properties>
         <bundle.symbolicName>org.ops4j.pax.cdi.api</bundle.symbolicName>
         <bundle.namespace>org.ops4j.pax.cdi.api</bundle.namespace>
     </properties>
-    
+
     <dependencies>
-    
+
+        <!-- OSGi -->
+
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
             <scope>provided</scope>
         </dependency>
-    
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
             <scope>provided</scope>
         </dependency>
-    
+
+        <!-- APIs -->
+
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
@@ -73,6 +76,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
