--- a/pax-cdi-manual/pom.xml
+++ b/pax-cdi-manual/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -18,8 +19,10 @@
     under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
         <artifactId>pax-cdi-parent</artifactId>
@@ -29,9 +32,9 @@
 
     <artifactId>pax-cdi-manual</artifactId>
     <packaging>war</packaging>
-    
+
     <name>OPS4J Pax CDI Manual</name>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -92,4 +95,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
