--- a/tck/pax-cdi-tck-runner/pom.xml
+++ b/tck/pax-cdi-tck-runner/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
         <artifactId>tck</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.4-SNAPSHOT</version>
     </parent>
 
     <groupId>org.ops4j.pax.cdi.tck</groupId>
@@ -152,7 +152,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
-                            <overWrite>true</overWrite>
+                            <overWriteIfNewer>true</overWriteIfNewer>
                             <stripVersion>true</stripVersion>
 
                             <artifactItems>
